<resources>
    <string name="app_name">Pomodoro</string>
    <string name="default_time_display">00:00:00</string>
    <string name="startButtonText">Start</string>
    <string name="startButton30Text">Start from 30 min</string>
    <string name="startButton60Text">Start from 60 min</string>
    <string name="startButton90Text">Start from 90 min</string>
    <string name="startButton120Text">Start from 120 min</string>
</resources>