<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"><![CDATA[


    app:layout_constraintTop_toBottomOf="@+id/countDownView"
    app:layout_constraintVertical_bias="0.11" />















    ]]>

    <Button
        android:id="@+id/startCountdownButton"
        android:id="@+id/startCountdown30Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="620dp"
        android:text="@string/startButtonText"
        android:text="@string/startButton30Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startCountdown60Button"
        app:layout_constraintVertical_bias="0.652" />

    <Button
        android:id="@+id/startCountdown60Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="456dp"
        android:text="@string/startButton60Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startCountdown30Button"
        app:layout_constraintVertical_bias="0.099" />

    <Button
        android:id="@+id/startCountdown90Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startButton90Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startCountdown60Button"
        app:layout_constraintVertical_bias="0.065" />

    <Button
        android:id="@+id/startCountdown120Button"
        android:layout_width="186dp"
        android:layout_height="33dp"
        android:text="@string/startButton120Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startCountdown90Button"
        app:layout_constraintVertical_bias="0.118" />


</androidx.constraintlayout.widget.ConstraintLayout>
